Add support for boundary character + prefixes/suffixes + enhance algorithm